# cross-platform-service

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: cross_platform_delete.rs  cross_platform_install.rs  cross_platform_service.rs  cross_platform_start.rs  cross_platform_stop.rs  unix_create_unit.rs  unix_delete_unit.rs  unix_start_unit.rs  unix_stop_unit.rs  unix_unit_status.rs  win_create_service.rs  win_delete_service.rs  win_sample_service.rs  win_service_status.rs  win_start_service.rs  win_stop_service.rs
src/: lib.rs  service.rs  service_manager.rs
src/unix/: dbus_systemd1.rs  mod.rs  services.rs
src/windows/: mod.rs  win32_api_services.rs  win_service_manager.rs
