[package]
name = "cross-platform-service"
description = "Provides facilities to create and manage cross platform service"
readme = "README.md"
version = "0.1.0"
authors = ["AminRaay"]
edition = "2018"
keywords = ["service", "windows service", "linux service"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
dbus = "0.9.3"
signal-hook = "0.3.9"

[target.'cfg(windows)'.dependencies]
windows = "0.13.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.13.0"
